[package]
name = "git-cache-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
camino = "1.1.9"
monoio = { version = "0.2.4", features = ["splice"], git = "https://github.com/bytedance/monoio"}
shellexpand = "3.1.1"
signal-hook = { version = "0.3.18", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
